--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -11,4 +11,24 @@ h2,
 h3,
 p {
   font-family: "Roboto";
+}
+
+.task-window {
+  max-height: 400px;
+  width: 300px;
+  overflow-y: scroll;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.window-row {
+  display: flex;
+  gap: 100px;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.insert-row {
+  display: flex;
+  flex-direction: row;
 }/*# sourceMappingURL=main.css.map */
