--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -16,3 +16,23 @@ p {
 .navbar {}
 
 .navbutton {}
+
+.task-window {
+    max-height: 400px;
+    width: 300px;
+    overflow-y: scroll;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.window-row {
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.insert-row {
+    display: flex;
+    flex-direction: row;
+}
