--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -28,12 +28,8 @@ p {
 
 .window-row {
     display: flex;
-    gap: 100px;
+    gap: 150px;
+    margin: calc(5px + 2%);
     justify-content: center;
-    flex-direction: row;
-}
-
-.insert-row {
-    display: flex;
     flex-direction: row;
 }
