--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -14,6 +14,19 @@ p {
   font-family: "Roboto";
 }
 
+.navbar {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.navbutton {
+  margin: 10px;
+  background-color: black;
+  color: white;
+  padding: 20px;
+}
+
 .task-window {
   max-height: 400px;
   width: 300px;
