Change: misc UI changes

--- a/frontend/src/styles/taskcards.css
+++ b/frontend/src/styles/taskcards.css
@@ -1,11 +1,19 @@
 .task-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* Flexible columns */
   gap: 16px;
-  /* Spacing between grid items */
   padding: 16px;
-  /* Optional padding */
+  overflow-y: scroll;
+  scrollbar-width: none;
+  max-height: calc(35vh + 50px);
+  /* For Firefox */
+  -ms-overflow-style: none;
+  /* For Internet Explorer and Edge */
+}
+
+.task-container::-webkit-scrollbar {
+  display: none;
+  /* For Chrome, Safari, and Opera */
 }
 
 .sortableTask {
@@ -14,28 +22,37 @@
   justify-content: center;
   align-items: center;
   padding: 8px;
-  background-color: #f9f9f9;
-  /* Background color for tasks */
   border: 1px solid #ddd;
-  /* Optional border */
   border-radius: 8px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-  /* Subtle shadow */
-  min-height: 100px;
-  max-width: 200px;
-  /* Ensure a minimum height for tasks */
+  min-height: 200px;
+  max-width: calc(400px + 5vw);
+}
+
+.manipulateBar {
+  display: flex;
+  flex-direction: row;
 }
 
 .drag-handle {
   cursor: grab;
   padding: 4px;
   background: #ddd;
-  /* Optional */
   border-bottom: 1px solid #ccc;
-  /* Optional */
   text-align: center;
 }
 
 .drag-handle:active {
   cursor: grabbing;
+}
+
+@media screen and (min-width: 768px) {
+  .task-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .task-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }/*# sourceMappingURL=taskcards.css.map */
