--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -25,7 +25,9 @@ p {
     background-color: black;
     color: white;
     padding: 20px;
-
+    text-decoration: none;
+    border-radius: 10px;
+    font-family: "Roboto";
 }
 
 .task-window {
@@ -38,8 +40,11 @@ p {
 
 .window-row {
     display: flex;
-    gap: 150px;
+    gap: 100px;
+    min-width: calc(100px + 25vw);
+    max-width: 100vw;
     margin: calc(5px + 2%);
     justify-content: center;
+    align-items: center;
     flex-direction: row;
 }
