Change: started working on tag editing

--- a/frontend/src/styles/adders.css
+++ b/frontend/src/styles/adders.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=adders.css.map */
+.tagRow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 300px;
+  overflow-y: auto;
+}/*# sourceMappingURL=adders.css.map */
