--- a/frontend/src/styles/taskcards.css
+++ b/frontend/src/styles/taskcards.css
@@ -1,4 +1,4 @@
-.task-container {
+.taskContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
@@ -8,7 +8,7 @@
   max-height: calc(35vh + 50px);
   max-width: calc(40vw + 100px);
 }
-.task-container::-webkit-scrollbar {
+.taskContainer::-webkit-scrollbar {
   display: none;
 }
 
@@ -30,7 +30,6 @@
 }
 .sortableTask:active {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  cursor: grabbing;
 }
 
 .manipulateBar {
@@ -38,24 +37,24 @@
   flex-direction: row;
 }
 
-.drag-handle {
+.dragHandle {
   cursor: grab;
   padding: 4px;
   background: #ddd;
   border-bottom: 1px solid #ccc;
   text-align: center;
 }
-.drag-handle:active {
+.dragHandle:active {
   cursor: grabbing;
 }
 
 @media screen and (min-width: 768px) {
-  .task-container {
+  .taskContainer {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 @media screen and (min-width: 1200px) {
-  .task-container {
+  .taskContainer {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }/*# sourceMappingURL=taskcards.css.map */
