--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -47,4 +47,19 @@ p {
   justify-content: center;
   align-items: center;
   flex-direction: row;
+}
+
+.windowColumn {
+  display: flex;
+  min-width: calc(100px + 25vh);
+  max-width: 100vw;
+  gap: 50px;
+  margin: calc(5px + 2%);
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.textContainer {
+  max-width: calc(30vw + 50px);
 }/*# sourceMappingURL=main.css.map */
