--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -48,3 +48,18 @@ p {
     align-items: center;
     flex-direction: row;
 }
+
+.windowColumn {
+    display: flex;
+    min-width: calc(100px + 25vh);
+    max-width: 100vw;
+    gap: 50px;
+    margin: calc(5px + 2%);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.textContainer {
+    max-width: calc(30vw + 50px);
+}
