--- a/frontend/src/styles/taskcards.css
+++ b/frontend/src/styles/taskcards.css
@@ -25,8 +25,10 @@
   border-radius: 5px;
 }
 .sortableTask p {
-  overflow: wrap;
-  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: wrap;
+  max-width: 225px;
 }
 .sortableTask:active {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
