--- a/frontend/src/styles/taskcards.css
+++ b/frontend/src/styles/taskcards.css
@@ -4,6 +4,7 @@
   gap: 16px;
   padding: 16px;
   overflow-y: scroll;
+  overflow-x: hidden;
   scrollbar-width: none;
   max-height: calc(35vh + 50px);
   max-width: calc(40vw + 100px);
@@ -54,7 +55,7 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 2000px) {
   .taskContainer {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
