--- a/frontend/src/styles/taskcards.scss
+++ b/frontend/src/styles/taskcards.scss
@@ -1,6 +1,8 @@
+//This will need a better solution. Buggy as fuck
+
 .taskContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 16px;
     padding: 16px;
     overflow-y: scroll;
@@ -57,8 +59,14 @@
     }
 }
 
+@media screen and (min-width: 1200px) {
+    .taskContainer {
+        grid-template-columns: 1fr 1fr;
+    }
+}
 
-@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 1750px) {
     .taskContainer {
         grid-template-columns: 1fr 1fr 1fr;
     }
