--- a/frontend/src/styles/adders.scss
+++ b/frontend/src/styles/adders.scss
@@ -5,3 +5,16 @@
     max-width: 300px;
     overflow-y: auto;
 }
+
+.tagAdder {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    input {
+        padding: 0.5rem;
+        font-size: 1rem;
+    }
+
+    button {}
+}
