--- a/frontend/src/styles/taskcards.scss
+++ b/frontend/src/styles/taskcards.scss
@@ -9,7 +9,7 @@
     overflow-x: hidden;
     scrollbar-width: none;
     max-height: calc(35vh + 50px);
-    max-width: calc(40vw + 100px);
+    max-width: calc(45vw + 100px);
 
     &::-webkit-scrollbar {
         display: none;
@@ -25,7 +25,7 @@
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     min-width: 250px;
     min-height: 200px;
-    max-width: calc(400px + 5vw);
+    max-width: 400px;
     border-radius: 5px;
 
     p {
