--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -30,9 +30,17 @@ p {
     font-family: "Roboto";
 }
 
+.infoDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
 .windowdivs {
     display: flex;
-    gap: 100px;
+    gap: 50px;
     min-width: calc(100px + 25vw);
     max-width: 100vw;
     margin: calc(5px + 1%);
@@ -40,7 +48,6 @@ p {
     align-items: center;
     flex-direction: column;
 }
-
 
 .textContainer {
     max-width: calc(30vw + 50px);
