--- a/frontend/src/styles/taskcards.scss
+++ b/frontend/src/styles/taskcards.scss
@@ -11,6 +11,8 @@
     max-height: calc(35vh + 50px);
     max-width: calc(45vw + 100px);
 
+    /*To disable scrollbar. There will be enough visual context to see
+    if it overflows and user should see that*/
     &::-webkit-scrollbar {
         display: none;
     }
