--- a/frontend/src/styles/tags.scss
+++ b/frontend/src/styles/tags.scss
@@ -13,6 +13,7 @@
 
     button {
         font-size: 1rem;
+        margin: 2px;
     }
 }
 
@@ -45,6 +46,7 @@
     }
 
     button {
-        font-size: 0.7rem;
+        margin: 2px;
+        font-size: 1rem;
     }
 }
