--- a/frontend/src/styles/tags.scss
+++ b/frontend/src/styles/tags.scss
@@ -7,10 +7,12 @@
     max-height: 75px;
     overflow-y: scroll;
 
+    //Disable scrollbar
     &::-webkit-scrollbar {
         display: none;
     }
 
+    //Make buttons larger and stick them out from eachother
     button {
         font-size: 1rem;
         margin: 2px;
@@ -23,6 +25,7 @@
     flex-direction: row;
     flex-wrap: wrap;
 
+    //Make input fields larger for mobile
     input {
         padding: 0.5rem;
         font-size: 1rem;
@@ -34,6 +37,7 @@
     padding: 0.1rem;
     border-color: black;
     border-width: 2px;
+    //Give a distinctive border to separate from insertable tags
     border-style: solid;
     border-radius: 8px;
     max-width: 300px;
@@ -41,10 +45,12 @@
     overflow-y: scroll;
     overflow-x: auto;
 
+    //Disanle scrollbar
     &::-webkit-scrollbar {
         display: none;
     }
 
+    //Make tag buttons bigger and give margins
     button {
         margin: 2px;
         font-size: 1rem;
