--- a/frontend/src/styles/taskcards.css
+++ b/frontend/src/styles/taskcards.css
@@ -27,6 +27,10 @@
   min-height: 200px;
   max-width: 400px;
   border-radius: 5px;
+  /*To avoid text elements from inside overflowing out.
+  Tasks essentially have no character limits, but users
+  will realize the diminishing returns with this and will result
+  to them splitting up their thoughts and tasks with this style limiter*/
 }
 .sortableTask p {
   overflow: hidden;
@@ -37,10 +41,15 @@
 .sortableTask:active {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 .manipulateBar {
   display: flex;
   flex-direction: row;
   padding: 10px;
+}
+.manipulateBar button {
+  margin: 2px;
+  font-size: 1rem;
 }
 
 .dragHandle {
